--- a/MediaPortal/Setup/MP2-Setup/MediaPortal2.wxs
+++ b/MediaPortal/Setup/MP2-Setup/MediaPortal2.wxs
@@ -109,6 +109,8 @@
       </Directory>
 
       <Directory Id="DesktopFolder" />
+      <Directory Id="SystemFolder" />
+      <Directory Id="System64Folder" />
     </Directory>
 
     <!-- Shortcuts -->
@@ -167,7 +169,7 @@
     <InstallExecuteSequence>
       
       <Custom Action="ReadCustomPaths" Before="SetCustomPaths">(NOT Installed) AND (INSTALLTYPE_CUSTOM = 0)</Custom>
-      
+
       <Custom Action="SetCustomPaths" Before="FileCost">NOT Installed</Custom>
       <Custom Action="AttachClientAndServer" After="InstallFinalize">NOT Installed</Custom>
 
